--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^20.0.0",
     "@vercel/ncc": "^0.38.0",
     "husky": "^9.1.7",
+    "prettier": "^3.5.3",
     "semantic-release": "^24.2.5",
     "typescript": "^5.0.0"
   }
